--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Titolo bello</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="icona/favicon.ico">
 </head>
 <body>
     <h1 id="bruh">Bruh...</h1>
