Ho scritto come in un paragrafo a caso

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1 id="bruh">Bruh...</h1>
-    <button id="bAndreatta" onclick="myFunction()">Dov'è Andreatta?</button>
+    <button id="bAndreatta" onclick="myFunction()">!!!</button>
     <div></div>
     <textarea></textarea>
     
